# corosync-quorum-notify

./: .gitignore  CMakeLists.txt  Containerfile  PKGBUILD  README.md  build.sh  corosync-quorum-notify.c  corosync-quorum-notify.default  corosync-quorum-notify.service  keepalived-quorum.sh
debian/: corosync-quorum-notify.service
